# rl-studio

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: grpo-local.yaml  grpo-qwen-smoke.yaml  grpo-qwen.yaml  toy-grpo.yaml
docs/: ARCHITECTURE.md
notebooks/: 01_reward_curve.py  02_kl.py
results/: .gitkeep
results/grpo-qwen/: modal_result.json  reward_curve.json
results/grpo-qwen-smoke/: modal_result.json  reward_curve.json
rewards/: example_reward.py
scripts/: check_repro.py  ci_report.py  modal_cuda_smoke.py  modal_grpo.py  test_readme.py
src/rl_studio/: __init__.py  cli.py  output.py
src/rl_studio/commands/: __init__.py  doctor.py  eval.py  gpu_train.py  sample.py  train.py
src/rl_studio/lib/: __init__.py  backends.py  config.py  grpo.py  tracking.py  trl_runner.py
tests/: test_cli_smoke.py
