[project]
name = "rl-studio"
version = "0.1.0"
description = "CLI-first GRPO RL fine-tuning studio — a real numpy GRPO loop on a verifiable task (verified, CPU) plus a scaffolded TRL/Modal LLM path. Derived from the ml-pipeline-template house style."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Ruben Haisma" }]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "mlflow>=2.14",
    "numpy>=1.26",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
    "marimo>=0.8",
]
# Heavy LLM stack for the scaffolded GPU path only. Kept out of the verified
# path and CI on purpose: `uv sync --extra dev` stays light and fast.
gpu = [
    "torch>=2.3",
    "transformers>=4.44",
    "trl>=0.10",
    "datasets>=2.20",
    "accelerate>=0.33",
    "modal>=0.64",
]

[project.scripts]
rl-studio = "rl_studio.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rl_studio"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
