[project]
name = "rl-studio"
version = "0.1.0"
description = "Agent-drivable RL fine-tuning harness — run real GRPO (TRL on a Modal GPU) or a CPU numpy loop from Claude Code / Codex via one --json CLI. Pluggable backends; built so coding agents can run and iterate fine-tunes autonomously."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Ruben Haisma" }]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "mlflow>=2.14",
    "numpy>=1.26",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
    "marimo>=0.8",
]
# Launch Modal GPU jobs from your laptop. This is ALL you need locally — the
# heavy training stack is baked into the Modal container image (see scripts/),
# never installed here. `uv sync --extra modal` stays small and fast.
modal = ["modal>=0.64"]
# Full LLM training stack — only for running GRPO on your OWN local GPU without
# Modal. On Modal this is built into the container image instead, so you do not
# need this extra to launch a rented-GPU run. Kept out of CI on purpose.
gpu = [
    "torch>=2.3",
    "transformers>=4.44",
    "trl>=0.10",
    "datasets>=2.20",
    "accelerate>=0.33",
]

[project.scripts]
rl-studio = "rl_studio.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rl_studio"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
